--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,15 +9,15 @@ on:
   pull_request: {}
 
 env:
-  PYTHON_VERSION: "3.9.14"
+  PYTHON_VERSION: "3.9.1"
 
 jobs:
   bandit:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+        uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.3.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Install dependencies
@@ -32,8 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+        uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.3.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Install dependencies
@@ -51,8 +51,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+        uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.3.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Install dependencies
@@ -68,11 +68,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9 ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9 ]
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+        uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.3.0
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
@@ -89,9 +89,9 @@ jobs:
     if: github.event_name == 'pull_request'
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2.3.4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v2.3.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
@@ -107,7 +107,7 @@ jobs:
       # upload artifact for dev build
       - name: Upload coverage results artifact
         if: github.ref != 'refs/heads/main'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: docs-site
           path: site/
@@ -117,9 +117,9 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2.3.4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v2.3.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
